--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -229,7 +229,7 @@
                 </widget>
                </item>
                <item row="1" column="0">
-                <widget class="QTableWidget" name="tableWidgetChangeAccounting">
+                <widget class="MyTableWidget" name="tableWidgetChangeAccounting">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                    <horstretch>0</horstretch>
@@ -252,7 +252,7 @@
                 </widget>
                </item>
                <item row="3" column="0">
-                <widget class="QTableWidget" name="tableWidgetApplicability">
+                <widget class="MyTableWidget" name="tableWidgetApplicability">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                    <horstretch>0</horstretch>
@@ -262,7 +262,7 @@
                 </widget>
                </item>
                <item row="1" column="1">
-                <widget class="QTableWidget" name="tableWidgetIssuanceOfCopies">
+                <widget class="MyTableWidget" name="tableWidgetIssuanceOfCopies">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                    <horstretch>0</horstretch>
@@ -298,7 +298,7 @@
                 </widget>
                </item>
                <item row="3" column="1">
-                <widget class="QTableWidget" name="tableWidgetCopyAccounting">
+                <widget class="MyTableWidget" name="tableWidgetCopyAccounting">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                    <horstretch>0</horstretch>
@@ -622,6 +622,13 @@
    </property>
   </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>MyTableWidget</class>
+   <extends>QTableWidget</extends>
+   <header>mytablewidget.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
