Добавил файл иконки arhiv.png (да простят меня за arhiv :) ). Создал файл ресурсов, и запихнул иконку туда. Встроил иконку в MainWindow.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,6 +18,10 @@
   <property name="windowTitle">
    <string>Архивный учет</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="resource.qrc">
+    <normaloff>:/new/prefix1/arhiv.png</normaloff>:/new/prefix1/arhiv.png</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
@@ -622,6 +626,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
