--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>910</width>
-    <height>648</height>
+    <height>672</height>
    </rect>
   </property>
   <property name="font">
@@ -69,7 +69,7 @@
                <item row="0" column="2">
                 <widget class="QLabel" name="labelReceiptDate">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+                  <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -88,7 +88,7 @@
                <item row="2" column="0">
                 <widget class="QLabel" name="labelName">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+                  <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -101,7 +101,7 @@
                <item row="1" column="0">
                 <widget class="QLabel" name="labelDesignation">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+                  <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -124,7 +124,7 @@
                <item row="4" column="0">
                 <widget class="QLabel" name="labelComment">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="MinimumExpanding" vsizetype="Maximum">
+                  <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -160,7 +160,7 @@
                <item row="0" column="0">
                 <widget class="QLabel" name="labelInventoryNumber">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+                  <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -193,7 +193,7 @@
                <item row="1" column="2">
                 <widget class="QLabel" name="labelKitFormat">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+                  <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -229,8 +229,8 @@
                    <rect>
                     <x>0</x>
                     <y>0</y>
-                    <width>458</width>
-                    <height>174</height>
+                    <width>450</width>
+                    <height>212</height>
                    </rect>
                   </property>
                   <attribute name="label">
@@ -247,8 +247,8 @@
                    <rect>
                     <x>0</x>
                     <y>0</y>
-                    <width>458</width>
-                    <height>174</height>
+                    <width>450</width>
+                    <height>212</height>
                    </rect>
                   </property>
                   <attribute name="label">
@@ -261,6 +261,14 @@
                   </layout>
                  </widget>
                  <widget class="QWidget" name="page_3">
+                  <property name="geometry">
+                   <rect>
+                    <x>0</x>
+                    <y>0</y>
+                    <width>450</width>
+                    <height>212</height>
+                   </rect>
+                  </property>
                   <attribute name="label">
                    <string>Страница</string>
                   </attribute>
@@ -271,6 +279,14 @@
                   </layout>
                  </widget>
                  <widget class="QWidget" name="page_4">
+                  <property name="geometry">
+                   <rect>
+                    <x>0</x>
+                    <y>0</y>
+                    <width>450</width>
+                    <height>212</height>
+                   </rect>
+                  </property>
                   <attribute name="label">
                    <string>Страница</string>
                   </attribute>
